5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1644_2703.log
== TEST (2019-04-09 16:27:36) 
-- CODE:
v= int(input("Insira a idade:"))

if v(v<=18):
	mensagem=eleitor
else:
	mensagem= nao_eleitor

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if v(v<=18):
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:27:53) 
-- CODE:
v= (input("Insira a idade:")

if v(v<=18):
	mensagem=eleitor
else:
	mensagem= nao_eleitor

print(mensagem)
-- ERROR:
File "XXXX", line 3
    if v(v<=18):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:00) 
-- CODE:
v= input("Insira a idade:")

if v(v<=18):
	mensagem=eleitor
else:
	mensagem= nao_eleitor

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if v(v<=18):
TypeError: '<=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:14) 
-- CODE:
v= float(input("Insira a idade:"))

if v(v<=18):
	mensagem=eleitor
else:
	mensagem= nao_eleitor

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if v(v<=18):
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:24) 
-- CODE:
v= float(input("Insira a idade:"))

if (v<=18):
	mensagem=eleitor
else:
	mensagem= nao_eleitor

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem=eleitor
NameError: name 'eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:27) 
-- CODE:
v= float(input("Insira a idade:"))

if (v<=18):
	mensagem=eleitor
else:
	mensagem= nao_eleitor

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem=eleitor
NameError: name 'eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:34) 
-- CODE:
v= input("Insira a idade:")

if (v<=18):
	mensagem=eleitor
else:
	mensagem= nao_eleitor

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (v<=18):
TypeError: '<=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:04) 
-- CODE:
v= int(input("insira a idade"))

if (v<=18):
	mensagem=eleitor
else:
	mensagem= nao_eleitor

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem=eleitor
NameError: name 'eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:24) 
-- CODE:
v= int(input("insira a idade"))

if (v<=18):
	mensagem= leitor
else:
	mensagem= nao_eleitor

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem= leitor
NameError: name 'leitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:27) 
-- CODE:
v= int(input("insira a idade"))

if (v<=18):
	mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

print(mensagem)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:43) 
-- CODE:
v= int(input("insira a idade"))

if (v>=18):
	mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

print(mensagem)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:30:48) 
-- CODE:
v= int(input("insira a idade"))

if (v>=18):
	mensagem= "eleitor"
else:
	mensagem= "nao_eleitor"

print(mensagem)
-- EXECUTION TIME:
0.16031
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
